@@ -1,3 +1,8 @@
+2017-01-18  Markus Trippelsdorf  <markus@trippelsdorf.de>
+
+	PR c++/77489
+	* mangle.c (write_discriminator): Handle discriminator >= 10.
+
 2017-01-17  Nathan Sidwell  <nathan@acm.org>
 
 	PR c++/61636
