@@ -1,3 +1,9 @@
+2017-01-18  Markus Trippelsdorf  <markus@trippelsdorf.de>
+
+	PR c++/77489
+	* cp-demangle.c (d_discriminator): Handle discriminator >= 10.
+	* testsuite/demangle-expected: Add tests for discriminator.
+
 2017-01-04  Jakub Jelinek  <jakub@redhat.com>
 
 	Update copyright years.
