@@ -1,3 +1,8 @@
+2017-01-18  Markus Trippelsdorf  <markus@trippelsdorf.de>
+
+	PR c++/77489
+	* doc/invoke.texi (fabi-version): Document discriminator mangling.
+
 2017-01-17  Segher Boessenkool  <segher@kernel.crashing.org>
 
 	PR target/78875
